# opengpws

./: .gitignore  CMakeLists.txt  build_release
api/opengpws/: xplane_api.h
data/: DEM.frag  DEM.vert  DEM_frag.glsl  bank_angle.aup  bank_angle.flac  caut_terr.aup  caut_terr.flac  dont_sink.aup  dont_sink.flac  glideslope.flac  go_around_windshear_ahead.flac  go_around_ws_ahead.aup  go_around_ws_ahead.flac  gs.aup  gs2.flac  monitor_radar_display.flac  obst_ahead_pull_up.aup  obst_ahead_pull_up.flac  obstacle_ahead.flac  pull_up.aup  pull_up.flac  sinkrate.aup  sinkrate.flac  terr.aup  terr.flac  terr2.aup  terr2.flac  terr_ahead.flac  terr_ahead_pull_up.aup  terr_ahead_pull_up.flac  terrain.flac  terrain2.flac  too_low_flaps.aup  too_low_flaps.flac  too_low_gear.aup  too_low_gear.flac  too_low_terr.aup  too_low_terr.flac  too_low_terrain.flac  ws.flac  (+1 more)
data/bank_angle_data/e00/d00/: e0000888.au
data/caut_terr_data/e00/d00/: e0000631.au
data/dont_sink_data/e00/d00/: e000080e.au  e0000d75.au
data/garmin/: caut_terr.flac  dont_sink.flac  obst_ahead.flac  obst_ahead_pull_up.flac  pull_up.flac  sinkrate.flac  terr_ahead.flac  terr_ahead_pull_up.flac  too_low_flaps.flac  too_low_gear.flac  too_low_terr.flac
data/garmin/src/: caut_terr.flac  dont_sink.flac  obst_ahead.flac  obst_ahead_pull_up.flac  pull_up.flac  sinkrate.flac  terr_ahead.flac  terr_ahead_pull_up.flac  too_low_flaps.flac  too_low_gear.flac  too_low_terr.flac
data/go_around_ws_ahead_data/e00/d00/: e000041e.au  e0000c2a.au
data/gs_data/e00/d00/: e0000e12.au
data/obst_ahead_pull_up_data/e00/d00/: e0000fa7.au
data/pull_up_data/e00/d00/: e0000efe.au
data/ra/boeing/: 10.aup  10.flac  100.aup  100.flac  1000.aup  1000.flac  20.aup  20.flac  200.aup  200.flac  2500.aup  2500.flac  30.aup  30.flac  300.aup  300.flac  40.aup  40.flac  400.aup  400.flac  50.aup  50.flac  500.aup  500.flac
data/ra/boeing/1000_data/e00/d00/: e0000ee9.au
data/ra/boeing/100_data/e00/d00/: e0000f46.au
data/ra/boeing/10_data/e00/d00/: e000019a.au
data/ra/boeing/200_data/e00/d00/: e000015e.au
data/ra/boeing/20_data/e00/d00/: e0000f73.au
data/ra/boeing/2500_data/e00/d00/: e000058d.au
data/ra/boeing/300_data/e00/d00/: e0000527.au
data/ra/boeing/30_data/e00/d00/: e00000dc.au
data/ra/boeing/400_data/e00/d00/: e00003cb.au
data/ra/boeing/40_data/e00/d00/: e0000f03.au
data/ra/boeing/500_data/e00/d00/: e0000215.au
data/ra/boeing/50_data/e00/d00/: e0000a83.au
data/ra/garmin/: 500.flac  500_garmin.aup
data/ra/garmin/500_garmin_data/e00/d00/: e000057f.au
data/sinkrate_data/e00/d00/: e0000e70.au
data/terr2_data/e00/d00/: e0000fbe.au
data/terr_ahead_pull_up_data/e00/d00/: e00002f5.au  e00007a8.au
data/terr_data/e00/d00/: e0000066.au
data/too_low_flaps_data/e00/d00/: e00008f5.au
data/too_low_gear_data/e00/d00/: e00004c6.au
data/too_low_terr_data/e00/d00/: e0000885.au
notarize/: notarization.plist  notarize  notarize.make
opengpws/: xplane_api.h
qmake/: build  qmake.pro
src/: CMakeLists.txt  dbg_log.c  dbg_log.h  egpws.c  egpws.h  snd_sys.c  snd_sys.h  terr.c  terr.h  xplane.c  xplane.h  xplane_api.h
